# Python-Convert

./: .gitignore  Makefile  QUICK_START.md  README.md  README_DEPLOY.md  TESTING.md  TROUBLESHOOTING.md  config.yaml  config.yaml.example  install_deps.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_bridge.sh  test_ndn_client.py
docs/: DEPLOYMENT.md  NDN_DEMO_VS_MAIN.md
examples/: __init__.py  grpc_bidirectional_demo.py  ndn_demo.py
scripts/: start_client.sh  start_server.sh  status.sh  stop_client.sh  stop_server.sh
src/python_project/: __init__.py  __main__.py  config.py  main.py  utils.py
src/python_project/grpc/: __init__.py  __main__.py  bidirectional.proto  bidirectional_pb2.py  bidirectional_pb2_grpc.py  client.py  converter.py  server.py
src/python_project/ndn/: __init__.py  client.py  server.py
tests/: conftest.py  test_main.py
